fixed path, tested on windows and mac